--- a/views/aboutUs.html
+++ b/views/aboutUs.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="content who" ng-if="about.selected === 0">
-	<who_we_are></who_we_are>
+	<who></who>
   </div>
 <!--  
   <speciality></speciality>
