--- a/js/templates/whoDirective.html
+++ b/js/templates/whoDirective.html
@@ -9,6 +9,7 @@
           <div class="display-inline text-center">
             <img  ng-src="images/{{text.img}}" alt="{{text.alt}}" />
           </div>
+		  
 		  <!--<div class="display-inline text-center content-text" ng-if="{{text.class_container}} === odd">
             <p>{{text.text}}
             </p>
@@ -16,3 +17,6 @@
         </div>
       </div>
     </div>
+	<div ng-controller="about">
+	{{text.test}}
+	</div>
