--- a/views/aboutUs.html
+++ b/views/aboutUs.html
@@ -29,6 +29,7 @@
       <a ng-click="about.selected = 3" ng-class="{'selected' : about.selected === 3}" href class="">Contact Us</a>
     </div>
   </div>
+  {{test}}
   <div class="content who" ng-show="about.selected === 0">
 	<who></who>
   </div>
@@ -37,4 +38,3 @@
   <contact></contact>
   -->
 </div>
-{{about.test}}
