--- a/js/templates/whoDirective.html
+++ b/js/templates/whoDirective.html
@@ -1,20 +1,24 @@
-    <div ng-repeat="text in textList">
-      <div class="text-container {{text.class_container}}">
-        <h2 class="{{text.class}} pt40 text-center">{{text.title}}</h2>
-        <div class="row center-margin">
-		  <div class="display-inline text-center content-text" <!--ng-if="{{text.class_container}} === normal"-->>
-            <p>{{text.text}}
-            </p>
-          </div>          
-          <div class="display-inline text-center">
-            <img  ng-src="images/{{text.img}}" alt="{{text.alt}}" />
-          </div>
-		  
-		  <!--<div class="display-inline text-center content-text" ng-if="{{text.class_container}} === odd">
-            <p>{{text.text}}
-            </p>
-          </div>-->
-
+<div ng-repeat="text in textList">
+  <div ng-class= "{'odd' : text.class == 'odd'}" class="post text-container">
+    <div class="row center-margin">
+      <div ng-if = "text.class === 'normal'">
+        <div class="display-inline text-center">
+          <img ng-src="images/{{text.img}}" alt="Coffee-Love" />
+        </div>
+        <div class="display-inline text-center pl30 pr30  content-text">
+          <h2 class="mb10">{{text.title}}</h2>
+          <p>{{text.text}}</p>
+        </div>
+      </div>
+      <div ng-if = "text.class === 'odd'">
+        <div class="display-inline text-center pl30 pr30 content-text">
+          <h2 class="mb10">{{text.title}}</h2>
+          <p>{{text.text}}</p>
+        </div>
+        <div class="display-inline text-center">
+          <img  ng-src="images/{{text.img}}" alt="happy-face" />
         </div>
       </div>
     </div>
+  </div>
+</div>
