--- a/js/templates/whoDirective.html
+++ b/js/templates/whoDirective.html
@@ -1,4 +1,4 @@
-<div ng-repeat="text in aboutControllerVm.textList">
+<!--<div ng-repeat="text in aboutControllerVm.textList">
   <div ng-class= "{'odd' : text.class == 'odd'}" class="post text-container">
     <div class="row center-margin">
       <div ng-if = "text.class === 'normal'">
@@ -22,8 +22,9 @@
     </div>
   </div>
 </div>
-<!--
-<div ng-repeat="text in textList">
+-->
+
+<div ng-repeat="text in aboutControllerVm.textList">
 	  <div ng-class= "{'odd' : text.class == 'odd'}" class="text-container">
         <h2 class="mt40 pt40 text-center">We Are Who We Are</h2>
         <div class="row center-margin">
@@ -48,4 +49,3 @@
 		</div>
       </div>
     </div>
--->
