--- a/views/aboutUs.html
+++ b/views/aboutUs.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="content who" ng-show="about.selected === 0">
-	<who></who>
+	<who-directive></who-directive>
   </div>
 <!--  
   <speciality></speciality>
