--- a/js/templates/contactDirective.html
+++ b/js/templates/contactDirective.html
@@ -1,20 +1,19 @@
-<div ng-repeat="text in textList">
-<div class="content contact" ng-show="about.selected === 3">
+<div ng-repeat="text in contactControllerVm.textList">
     <div class="text-center contact-container mt40 pt40 pb40">
       <h2 class="text-center brown underlined pb40">Direct Contact</h2>
       <div class="information">
         <h2 class="mb20">Phone</h2>
         <div class="mb20">
-          <p class="mb10">USA Toll Free: +1 111 9211111 </p>
-          <p>ARG Phone: +54 0223 1111111</p>
+          <p class="mb10">{{text.usaphone}}</p>
+          <p>{{text.argphone}}</p>
         </div>
         <h2 class="mb20">Email</h2>
         <div class="mb20">
-          <a href="mailto:hello@test.net">hello@test.net</a>
+          <a href="mailto:hello@test.net">{{text.mail}}</a>
         </div>
         <h2 class="mb20">Adress</h2>
         <div>
-          <p>Mar Del Plata, Argentina</p>
+          <p>{{text.adress}}</p>
         </div>
       </div>
     </div>
