--- a/js/templates/specialityDirective.html
+++ b/js/templates/specialityDirective.html
@@ -1,45 +1,25 @@
-<div ng-repeat="text in textList">
-<div class="content speciality" ng-show="about.selected === 1">
-    <div>
-      <div class="text-container odd">
-        <h2 class="mt40 pt40 text-center">Coffe Of Course !!</h2>
+<div ng-repeat="text in specialityControllerVm.textList">
+	  <div ng-class= "{'odd' : text.class == 'odd'}" class="text-container">
+        <h2 class="mt40 pt40 text-center">{{text.title}}</h2>
         <div class="row center-margin">
+		<div ng-if = "text.class === 'normal'">
           <div class="display-inline text-center content-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>{{text.text}}
             </p>
           </div>
           <div class="display-inline text-center">
-            <img  ng-src="images/happy-face.jpg" alt="happy-face" />
+            <img  ng-src="images/{{text.img}}" alt="Coffe-love" />
           </div>
         </div>
-      </div>
-    </div>
-    <div>
-      <h2 class="pt40 text-center">All Types</h2>
-      <div class="text-container">
-        <div class="row center-margin">
-          <div class="display-inline text-center">
-            <img  ng-src="images/Coffee-Love.jpg" alt="Coffee-Love" />
+		<div ng-if = "text.class === 'odd'">
+			<div class="display-inline text-center">
+            <img  ng-src="images/{{text.img}}" alt="happy-face" />
           </div>
-          <div class="display-inline text-center content-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			<div class="display-inline text-center content-text">
+            <p>{{text.text}}
             </p>
           </div>
-        </div>
+		</div>
+		</div>
       </div>
     </div>
-    <div>
-      <div class="text-container odd">
-        <h2 class="pt40 text-center">When Ever You Want</h2>
-        <div class="row center-margin">
-          <div class="display-inline text-center content-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-          </div>
-          <div class="display-inline text-center">
-            <img  ng-src="images/happy-face.jpg" alt="happy-face" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
